--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@auth/prisma-adapter": "^2.11.1",
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
+    "@vercel/blob": "^2.0.1",
     "dotenv": "^17.2.3",
+    "mammoth": "^1.11.0",
     "next": "16.1.6",
     "next-auth": "5.0.0-beta.30",
+    "pdf-parse": "^2.4.5",
     "pg": "^8.18.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
