--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "mammoth": "^1.11.0",
     "next": "16.1.6",
     "next-auth": "5.0.0-beta.30",
-    "pdf-parse": "^2.4.5",
+    "pdf-parse-debugging-disabled": "^1.1.1",
     "pg": "^8.18.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "server-only": "^0.0.1",
     "zod": "^4.3.6"
   },
   "devDependencies": {
