--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@auth/prisma-adapter": "^2.11.1",
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
+    "@react-pdf/renderer": "^4.3.2",
     "@vercel/blob": "^2.0.1",
     "dotenv": "^17.2.3",
     "mammoth": "^1.11.0",
